@@ -22,6 +22,9 @@
 410,1	//WE_CALLBABY
 482,1	//PF_DOUBLECASTING
 462,1 //SL_KAIZEL
+496,1 //AM_TWILIGHT1
+497,1 //AM_TWILIGHT2
+498,1 //AM_TWILIGHT3
 512,3 //GS_TRACKING
 1014,1	//PR_REDEMPTIO
 10010,3	//GD_BATTLEORDER
